@@ -21,8 +21,9 @@ v0.7.1
 - Project with tiles (no shapefile) now creates directories for each tile id
 - Project inventories (gips_project inventory) doesn't fail if directory has extraneous files
 
-New functions
+New functionality
 - 'gips_project stack' for creating stacks of products in a GIPS project directory
+- added mapreduce functionality for multiprocessing
 
 MODIS
 - fixed segfault in indices and cleaned up extraneous printing
